--- a/css/musthave.less
+++ b/css/musthave.less
@@ -412,6 +412,14 @@
       width: percentage(3/4);
     }
 
+    &_640 {
+      width: 660px;
+    }
+
+    &_240 {
+      width: 260px;
+    }
+
     @media screen and (max-width: 800px) {
       width: 100% !important;
     }
@@ -596,6 +604,10 @@
 
   &__slide {
     margin: 0 10px;
+  }
+
+  &__sticky {
+    padding: 86px 0 0;
   }
 
   &__carousel {
@@ -990,5 +1002,123 @@
   &__country {
     display: inline-block;
     vertical-align: top;
+  }
+}
+
+
+
+.movies-filter {
+  color: #859293;
+  border: 1px solid #b6c4ca;
+  font-size: 15px;
+
+
+  &__row {
+    margin: 0 -1px;
+    border-top: 1px solid #b6c4ca;
+
+    .jq-selectbox {
+      &__select {
+        border: 0;
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+
+      &__dropdown {
+        border-top: 1px solid #b6c4ca;
+      }
+    }
+
+    &:first-child {
+      border-top: 0;
+    }
+  }
+
+  &__range {
+    padding: 20px 20px;
+  }
+
+  &__slider {
+    height: 2px;
+    border-radius: 0;
+    background: #b6c4ca;
+    border: none;
+    margin-top: 15px;
+
+    .ui-slider-handle {
+      width: 12px;
+      border: 3px solid #99d510;
+      background: #fff;
+      height: 12px;
+      border-radius: 50%;
+      margin-left: -6px;
+      top: -5px;
+      cursor: pointer;
+      transition: .2s ease;
+      transition-property: background-color;
+
+      &.ui-state-hover,
+      &.ui-state-active {
+        background-color: #99d510;
+      }
+    }
+
+    .ui-slider-range {
+      background: #99d510;
+      height: 4px;
+      border-radius: 0;
+      top: -1px;
+    }
+  }
+
+  &__reset {
+    height: 49px;
+    line-height: 49px;
+    background: transparent;
+    font: inherit;
+    cursor: pointer;
+    text-align: center;
+    width: 100%;
+    color: #000;
+  }
+}
+
+
+.radio-select {
+  > li {
+
+    > label {
+      height: 49px;
+      line-height: 49px;
+      display: block;
+      cursor: pointer;
+      padding: 0 20px;
+      transition: .2s ease;
+      transition-property: background-color;
+    }
+
+    > input {
+      display: none;
+
+      &:checked + label {
+        background-color: #99d510;
+        color: #fff;
+      }
+    }
+  }
+}
+
+
+.movies-search {
+  margin-bottom: 20px;
+
+  > input {
+    border-radius: 3px;
+    padding: 0 50px 0 20px;
+    font: inherit;
+    font-size: 15px;
+    height: 48px;
+    width: 100%;
+    border: 1px solid #b6c4ca;
   }
 }
