--- a/css/musthave.css
+++ b/css/musthave.css
@@ -311,9 +311,18 @@
 .layout-grid__row::after {
   clear: both;
 }
-.layout-grid__column {
-  padding: 0 10px;
+.layout-grid__visible_xs {
+  display: none;
+}
+@media screen and (max-width: 800px) {
+  .layout-grid__visible_xs {
+    display: block;
+  }
+}
+.layout-grid__column,
+.layout-grid__column-xs {
   float: left;
+  padding: 0 10px;
 }
 .layout-grid__column_right {
   float: right;
@@ -330,11 +339,17 @@
 .layout-grid__column_3_4 {
   width: 75%;
 }
-.layout-grid__column_640 {
-  width: 660px;
-}
 .layout-grid__column_240 {
   width: 260px;
+}
+.layout-grid__column_400 {
+  width: 420px;
+}
+.layout-grid__column_480 {
+  width: 500px;
+}
+.layout-grid__column_640 {
+  width: 660px;
 }
 @media screen and (max-width: 800px) {
   .layout-grid__column {
@@ -478,6 +493,9 @@
     border-top: 1px solid #e5e8e8;
     margin-bottom: 0;
   }
+  .movies-group:first-child {
+    border-top: 0;
+  }
   .movies-group__refresh {
     float: right;
   }
@@ -490,9 +508,6 @@
 }
 .movies__slide {
   margin: 0 10px;
-}
-.movies__sticky {
-  padding-top: 86px;
 }
 .movies__carousel .slick-list {
   margin-left: -10px;
@@ -838,14 +853,80 @@
   display: inline-block;
   vertical-align: top;
 }
+@-webkit-keyframes movies-filter {
+  0% {
+    -webkit-transform: translate3d(-100%, -50%, 0);
+            transform: translate3d(-100%, -50%, 0);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translate3d(-50%, -50%, 0);
+            transform: translate3d(-50%, -50%, 0);
+    opacity: 1;
+  }
+}
+@keyframes movies-filter {
+  0% {
+    -webkit-transform: translate3d(-100%, -50%, 0);
+            transform: translate3d(-100%, -50%, 0);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translate3d(-50%, -50%, 0);
+            transform: translate3d(-50%, -50%, 0);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes overlay {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: .6;
+  }
+}
+@keyframes overlay {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: .6;
+  }
+}
 .movies-filter {
   color: #859293;
-  border: 1px solid #b6c4ca;
   font-size: 15px;
+  padding-top: 86px;
+}
+.movies-filter__overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: #030610;
+  opacity: .6;
+  display: none;
+  -webkit-animation: overlay .2s ease;
+          animation: overlay .2s ease;
+}
+.movies-filter__overlay.visible {
+  display: block;
+}
+.movies-filter__apply {
+  margin: 20px 0;
+}
+.movies-filter__apply-btn {
+  display: block;
+  height: 48px;
+  line-height: 52px;
+  font-size: 14px;
 }
 .movies-filter__row {
-  margin: 0 -1px;
-  border-top: 1px solid #b6c4ca;
+  border: 1px solid #b6c4ca;
+  border-bottom: 0;
+  background: #fff;
 }
 .movies-filter__row .jq-selectbox__select {
   border: 0;
@@ -855,8 +936,44 @@
 .movies-filter__row .jq-selectbox__dropdown {
   border-top: 1px solid #b6c4ca;
 }
+.movies-filter__row .jq-selectbox__dropdown li {
+  border-left: 0;
+  border-right: 0;
+}
+.movies-filter__row .jq-selectbox__trigger {
+  border: none;
+  width: 49px;
+  height: 49px;
+  right: 0;
+  top: 0;
+  margin: 0;
+  background: url('../images/select.png') center no-repeat;
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi) {
+  .movies-filter__row .jq-selectbox__trigger {
+    background-image: url('../images/select.2x.png');
+    background-size: 12px 7px;
+  }
+}
+.movies-filter__row .jq-checkbox {
+  vertical-align: top;
+}
+.movies-filter__row .jq-checkbox + label {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 5px;
+  margin-left: 8px;
+  font-family: 'Myriad Pro', sans-serif;
+  color: #000;
+  cursor: pointer;
+  font-size: 18px;
+}
 .movies-filter__row:first-child {
   border-top: 0;
+}
+.movies-filter__row_wide {
+  padding: 20px;
+  background: #f7f8f8;
 }
 .movies-filter__range {
   padding: 20px 20px;
@@ -903,7 +1020,78 @@
   cursor: pointer;
   text-align: center;
   width: 100%;
+  border-bottom: 1px solid #b6c4ca;
   color: #000;
+}
+.movies-filter__search {
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 800px) {
+  .movies-filter {
+    padding: 30px 0 0;
+    border-top: 1px solid #e5e8e8;
+  }
+  .movies-filter__properties {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 9999;
+    -webkit-transform: translate3d(-50%, -50%, 0);
+            transform: translate3d(-50%, -50%, 0);
+    width: 440px;
+    display: none;
+    -webkit-animation: movies-filter 0.4s ease;
+            animation: movies-filter 0.4s ease;
+  }
+  .movies-filter__properties.visible {
+    display: block;
+  }
+  .movies-filter__row_wide {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 600px) {
+  .movies-filter__properties {
+    width: 280px;
+  }
+}
+.search {
+  position: relative;
+}
+.search__input {
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+  padding: 0 50px 0 20px;
+  font: inherit;
+  font-size: 15px;
+  height: 48px;
+  width: 100%;
+  border: 1px solid #b6c4ca;
+}
+.search__submit {
+  width: 56px;
+  height: 48px;
+  position: absolute;
+  right: 0px;
+  top: 0;
+  background: transparent url('../images/search.png') center no-repeat;
+  cursor: pointer;
+}
+.search_focusin .search__input {
+  border-color: #414b4c;
+}
+.search_focusin .search__submit {
+  background-image: url('../images/search-focus.png');
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi) {
+  .search__submit {
+    background-image: url('../images/search.2x.png');
+    background-size: 18px 18px;
+  }
+  .search_focusin .search__submit {
+    background-image: url('../images/search-focus.2x.png');
+    background-size: 18px 18px;
+  }
 }
 .radio-select > li > label {
   height: 49px;
@@ -923,18 +1111,19 @@
   background-color: #99d510;
   color: #fff;
 }
-.movies-search {
-  margin-bottom: 20px;
-}
-.movies-search > input {
+.simple-btn {
+  border: 1px solid #b6c4ca;
+  font-size: 15px;
+  text-align: center;
+  display: block;
   -webkit-border-radius: 3px;
           border-radius: 3px;
-  padding: 0 50px 0 20px;
-  font: inherit;
-  font-size: 15px;
-  height: 48px;
-  width: 100%;
-  border: 1px solid #b6c4ca;
+  padding: 16px 0 12px;
+  color: #859293;
+}
+.simple-btn:hover {
+  color: #000;
+  border-color: #414b4c;
 }
 
 /*# sourceMappingURL=musthave.css.map */
