--- a/css/musthave.css
+++ b/css/musthave.css
@@ -855,25 +855,25 @@
 }
 @-webkit-keyframes movies-filter {
   0% {
-    -webkit-transform: translate3d(-100%, -50%, 0);
-            transform: translate3d(-100%, -50%, 0);
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
     opacity: 0;
   }
   100% {
-    -webkit-transform: translate3d(-50%, -50%, 0);
-            transform: translate3d(-50%, -50%, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
     opacity: 1;
   }
 }
 @keyframes movies-filter {
   0% {
-    -webkit-transform: translate3d(-100%, -50%, 0);
-            transform: translate3d(-100%, -50%, 0);
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
     opacity: 0;
   }
   100% {
-    -webkit-transform: translate3d(-50%, -50%, 0);
-            transform: translate3d(-50%, -50%, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
     opacity: 1;
   }
 }
@@ -904,15 +904,11 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 9999;
   background: #030610;
   opacity: .6;
   display: none;
   -webkit-animation: overlay .2s ease;
           animation: overlay .2s ease;
-}
-.movies-filter__overlay.visible {
-  display: block;
 }
 .movies-filter__apply {
   margin: 20px 0;
@@ -1031,20 +1027,26 @@
     padding: 30px 0 0;
     border-top: 1px solid #e5e8e8;
   }
-  .movies-filter__properties {
+  .movies-filter__properties-wrapper {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 9999;
-    -webkit-transform: translate3d(-50%, -50%, 0);
-            transform: translate3d(-50%, -50%, 0);
-    width: 440px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
     display: none;
+    z-index: 9999;
+  }
+  .movies-filter__properties-wrapper.visible,
+  .movies-filter__properties-wrapper .movies-filter__overlay {
+    display: block;
+  }
+  .movies-filter__properties {
+    position: relative;
+    width: 440px;
+    margin: 0 auto;
     -webkit-animation: movies-filter 0.4s ease;
             animation: movies-filter 0.4s ease;
-  }
-  .movies-filter__properties.visible {
-    display: block;
   }
   .movies-filter__row_wide {
     text-align: center;
