--- a/css/musthave.less
+++ b/css/musthave.less
@@ -1028,12 +1028,12 @@
 
 @keyframes movies-filter {
   0% {
-    transform: translate3d(-100%, -50%, 0);
+    transform: translate3d(-100%, 0, 0);
     opacity: 0;
   }
 
   100% {
-    transform: translate3d(-50%, -50%, 0);
+    transform: translate3d(0, 0, 0);
     opacity: 1;
   }
 }
@@ -1064,15 +1064,10 @@
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 9999;
     background: #030610;
     opacity: .6;
     display: none;
     animation: overlay .2s ease;
-
-    &.visible {
-      display: block;
-    }
   }
 
   &__handle {
@@ -1211,19 +1206,27 @@
     padding: 30px 0 0;
     border-top: 1px solid #e5e8e8;
 
-    &__properties {
+    &__properties-wrapper {
       position: fixed;
-      top: 50%;
-      left: 50%;
-      z-index: 9999;
-      transform: translate3d(-50%, -50%, 0);
-      width: 440px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: scroll;
       display: none;
-      animation: movies-filter .4s ease;
+      z-index: 9999;
 
-      &.visible {
+      &.visible,
+      .movies-filter__overlay {
         display: block;
       }
+    }
+
+    &__properties {
+      position: relative;
+      width: 440px;
+      margin: 0 auto;
+      animation: movies-filter .4s ease;
     }
 
     &__row_wide {
