--- a/css/musthave.less
+++ b/css/musthave.less
@@ -1,22 +1,4 @@
-.p-features {
-
-  &__row {
-  	margin-left: -13px;
-  	margin-right: -13px;
-  }
-
-  &__col {
-  	float: left;
-  	width: 50%;
-  	padding: 0 13px;
-
-    @media screen and (max-width: 800px) {
-      width: 100%;
-    }
-  }
-}
-
-.p-feature {
+.phone-feature {
 	text-align: center;
 	padding: 30px;
 	border: 1px solid #e9ecec;
@@ -239,6 +221,11 @@
     border: 1px solid #e7e7e7;
     padding: 25px;
     background: #fff;
+    display: none;
+
+    &.active {
+      display: block;
+    }
   }
 
   &__icon {
@@ -291,25 +278,21 @@
   }
 }
 
+.phone-service {
 
-.sp-examples {
-  &__row {
-    margin: 0 -20px;
+  &__name {
+    font: 18px/24px 'Myriad Pro Regular', sans-serif;
   }
 
-  &__col {
-    float: left;
-    width: 33.333%;
-    padding: 0 20px;
+  &__description {
+    color: #90969b;
+    font-size: 14px;
+    line-height: 22px;
 
-    @media screen and (max-width: 800px) {
-      width: 100%;
+    a {
+      color: #0091ff;
     }
   }
-}
-
-.sp-example {
-  margin-bottom: 30px;
 
   @media screen and (max-width: 800px) {
     text-align: center;
@@ -331,20 +314,6 @@
 
   &_bottom {
     margin-bottom: -52px;
-  }
-
-  &__row {
-    margin: 0 -40px;
-  }
-
-  &__col {
-    padding: 0 40px;
-    float: left;
-    width: 50%;
-
-    @media screen and (max-width: 800px) {
-      width: 100%;
-    }
   }
 
   &__image {
