--- a/css/musthave.css
+++ b/css/musthave.css
@@ -89,6 +89,11 @@
 .b-tariff__table tr > td .btn-light > span {
   background: #f7f8f8;
 }
+@media screen and (max-width: 800px) {
+  .b-tariff__table {
+    display: none;
+  }
+}
 .b-tariff__name {
   font-size: 24px;
   line-height: 1;
@@ -110,6 +115,24 @@
 }
 .tariff-table__section:last-child {
   padding-bottom: 10px;
+}
+.tariff-table__section .tariff-small {
+  background: #f7f8f8;
+  margin: 20px 0;
+  padding-bottom: 10px;
+}
+.tariff-table__section .tariff-small-line {
+  margin-top: 10px;
+}
+.tariff-table__section .tariff-small-line .btn-light {
+  margin: 10px 0;
+  width: 100% !important;
+  padding: 2px;
+}
+.tariff-table__section .tariff-small-line .btn-light > span {
+  text-align: center;
+  width: 100% !important;
+  margin: 0;
 }
 .tariff-table__name > h2 {
   display: inline-block;
