--- a/css/musthave.css
+++ b/css/musthave.css
@@ -55,11 +55,6 @@
     margin-top: 10px;
   }
 }
-@media screen and (max-width: 800px) {
-  br {
-    display: none;
-  }
-}
 .b-tariff__table {
   width: 100%;
   border-collapse: separate;
@@ -891,7 +886,7 @@
 .movies-filter {
   color: #859293;
   font-size: 15px;
-  padding-top: 86px;
+  padding-top: 60px;
 }
 .movies-filter__overlay {
   position: fixed;
@@ -1134,6 +1129,46 @@
 .simple-btn:hover {
   color: #000;
   border-color: #414b4c;
+}
+.movies-subscription {
+  background: #f7f8f8;
+  padding: 30px 10px;
+  margin-top: 60px;
+}
+.movies-subscription__logo {
+  text-align: center;
+}
+.movies-subscription h2 {
+  font-size: 50px;
+  line-height: 60px;
+  letter-spacing: -1px;
+  text-transform: uppercase;
+}
+.movies-subscription .movie__btn {
+  margin-top: 25px;
+}
+.movies-subscription .layout-grid__column_left {
+  width: 290px;
+}
+@media screen and (max-width: 800px) {
+  .movies-subscription .layout-grid__column_left {
+    padding: 0 20px;
+  }
+}
+.movies-subscription .layout-grid__column_right {
+  width: 350px;
+  padding-right: 40px;
+}
+@media screen and (max-width: 800px) {
+  .movies-subscription .layout-grid__column_right {
+    padding: 30px 20px 0;
+  }
+}
+@media screen and (max-width: 800px) {
+  .movies-subscription {
+    margin: 30px 0;
+    text-align: center;
+  }
 }
 
 /*# sourceMappingURL=musthave.css.map */
