--- a/css/musthave.less
+++ b/css/musthave.less
@@ -67,9 +67,9 @@
 
 
 @media screen and (max-width: 800px) {
-  br {
-    display: none;
-  }
+  // br {
+  //   display: none;
+  // }
 }
 
 
@@ -1047,7 +1047,7 @@
 .movies-filter {
   color: #859293;
   font-size: 15px;
-  padding-top: 86px;
+  padding-top: 60px;
 
   &__properties {
     // border: 1px solid #b6c4ca;
@@ -1335,4 +1335,48 @@
     color: #000;
     border-color: #414b4c;
   }
+}
+
+
+.movies-subscription {
+	background: #f7f8f8;
+	padding: 30px 10px;
+	margin-top: 60px;
+
+	&__logo {
+		text-align: center;
+	}
+
+	h2 {
+		font-size: 50px;
+		line-height: 60px;
+		letter-spacing: -1px;
+		text-transform: uppercase;
+	}
+
+	.movie__btn {
+		margin-top: 25px;
+	}
+
+	.layout-grid__column_left {
+		width: 290px;
+
+		@media screen and (max-width: 800px) {
+			padding: 0 20px;
+		}
+	}
+
+	.layout-grid__column_right {
+		width: 350px;
+		padding-right: 40px;
+
+		@media screen and (max-width: 800px) {
+			padding: 30px 20px 0;
+		}
+	}
+
+	@media screen and (max-width: 800px) {
+		margin: 30px 0;
+		text-align: center;
+	}
 }
